--- a/themes/hello-friend-ng/assets/scss/_logo.scss
+++ b/themes/hello-friend-ng/assets/scss/_logo.scss
@@ -23,7 +23,7 @@
     display: inline-block;
     width: 10px;
     height: 1rem;
-    background: #fe5186;
+    background: #446D81;
     margin-left: 5px;
     border-radius: 1px;
     animation: cursor 1s infinite;
