--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -21,7 +21,7 @@
     display: block;
     padding: 12px 16px;
     text-decoration: none;
-    color: #a9a9b3;
+    color: #a9a9b1;
 }
 
 .main-menu .dropdown .submenu {
@@ -33,6 +33,7 @@
     z-index: 1;
     top: 100%;
     left: 0;
+    text-align: left !important;
 }
 
 .main-menu .dropdown:hover .submenu {
@@ -41,13 +42,14 @@
 
 .main-menu .submenu li {
     display: block;
+    text-align: left !important;
 }
 
 .main-menu .submenu li a {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    color: #a9a9b3;
+    color: #a9a9b1;
 }
 
 .main-menu .submenu li a:hover {
