--- a/themes/hello-friend-ng/layouts/shortcodes/speaker.html
+++ b/themes/hello-friend-ng/layouts/shortcodes/speaker.html
@@ -1,8 +1,7 @@
 <div>
-  <!-- If you change the color of the border, if will be visible. Right now it's the same color as the background so we don't see it -->
 <style>
 table, th, td {
-  border: 1px solid #232425 !important; /* #232425 = Background color */
+  border: 1px solid #232425 !important; /* #232425 = Background color. If you change the color of the border, it will be visible. */
   border-collapse: collapse !important;
 }
 </style>
